fix: z-axis ui glitch
- don't let custom logos cover the left-nav

--- a/app/stylus/layout.styl
+++ b/app/stylus/layout.styl
@@ -612,6 +612,8 @@ body.scrolled
       padding-top 2px
       //transition all .1s ease-out
   .logo.custom-logo
+    &:before
+      height 45px
     a
       img
         max-height 32px
